# Lapis

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  Lapis.cmake  copyprojandcmake.bat  copyprojandcmake.bat.example  readme.md  windowsbuildinstructions.txt
src/: CommonGuiElements.cpp  CommonGuiElements.hpp  DemAlgos.cpp  DemAlgos.hpp  Lapis.cpp  Lapis.hpp  LapisController.cpp  LapisController.hpp  LapisData.cpp  LapisData.hpp  LapisGui.cpp  LapisGui.hpp  LapisLogger.cpp  LapisLogger.hpp  LapisObjects.cpp  LapisObjects.hpp  LapisParameters.cpp  LapisParameters.hpp  LapisPrivate.cpp  LapisPrivate.hpp  LapisTypedefs.hpp  LapisUtils.hpp  Logger.cpp  Logger.hpp  MetricTypeDefs.hpp  Options.cpp  Options.hpp  ParameterBase.hpp  ParameterGetter.hpp  PointMetricCalculator.cpp  PointMetricCalculator.hpp  ProductHandler.cpp  ProductHandler.hpp  UsableParameters.cpp  UsableParameters.hpp  app_pch.hpp  csmalgos.cpp  csmalgos.hpp  lapisutils.cpp  prerun_pch.hpp  (+1 more)
src/algorithms/: AllAlgorithmTypes.hpp  AllCsmAlgorithms.hpp  AllCsmPostProcessors.hpp  AllDemAlgorithms.hpp  AllTaoIdAlgorithms.hpp  AllTaoSegmentAlgorithms.hpp  AlreadyNormalized.cpp  AlreadyNormalized.hpp  CsmAlgorithm.hpp  CsmPostProcessor.hpp  DemAlgorithm.cpp  DemAlgorithm.hpp  DoNothingCsm.cpp  DoNothingCsm.hpp  FillCsm.cpp  FillCsm.hpp  HighPoints.cpp  HighPoints.hpp  MaxPoint.cpp  MaxPoint.hpp  SmoothAndFill.cpp  SmoothAndFill.hpp  SmoothCsm.cpp  SmoothCsm.hpp  TaoIdAlgorithm.hpp  TaoSegmentAlgorithm.hpp  VendorRaster.hpp  WatershedSegment.cpp  WatershedSegment.hpp  algo_pch.hpp
src/gis/: Alignment.cpp  Alignment.hpp  BaseDefs.hpp  CoordRef.cpp  CoordRef.hpp  CoordTransform.cpp  CoordTransform.hpp  CoordVector.hpp  Coordinate.hpp  CropView.hpp  CurrentLasPoint.cpp  CurrentLasPoint.hpp  Extent.cpp  Extent.hpp  GDALWrappers.cpp  GDALWrappers.hpp  GeoTiffWrapper.hpp  GisExceptions.hpp  LasExtent.cpp  LasExtent.hpp  LasFilter.hpp  LasIO.cpp  LasIO.hpp  LasReader.cpp  LasReader.hpp  ProjWrappers.cpp  QuadExtent.cpp  QuadExtent.hpp  Raster.hpp  RasterAlgos.hpp  Unit.cpp  Unit.hpp  gis_pch.hpp  projwrappers.hpp
src/logger/: LapisLogger.cpp  LapisLogger.hpp
src/parameters/: AlignmentParameter.cpp  AlignmentParameter.hpp  AllParameters.hpp  AoIParameter.cpp  AoIParameter.hpp  CommonGuiElements.hpp  ComputerParameter.cpp  ComputerParameter.hpp  CsmParameter.cpp  CsmParameter.hpp  DemParameter.cpp  DemParameter.hpp  FilterParameter.cpp  FilterParameter.hpp  FineIntParameter.cpp  FineIntParameter.hpp  GuiCRSInput.cpp  GuiCRSInput.hpp  GuiCheckBox.cpp  GuiCheckBox.hpp  GuiClassCheckBoxes.cpp  GuiClassCheckboxes.hpp  GuiCmdElement.cpp  GuiCmdElement.hpp  GuiFileSpecifier.cpp  GuiFileSpecifier.hpp  GuiFolderTextInput.cpp  GuiFolderTextInput.hpp  GuiHelpMarker.cpp  GuiHelpMarker.hpp  GuiIntegerTextBox.cpp  GuiIntegerTextBox.hpp  GuiInvertedCheckbox.cpp  GuiInvertedCheckbox.hpp  GuiMultiNumericTextBoxWithUnits.cpp  GuiMultiNumericTextBoxWithUnits.hpp  GuiNumericTextBox.cpp  GuiNumericTextBox.hpp  GuiNumericTextBoxWithUnits.cpp  GuiNumericTextBoxWithUnits.hpp  (+31 more)
src/run/: AllHandlers.hpp  CsmHandler.cpp  CsmHandler.hpp  FineIntHandler.cpp  FineIntHandler.hpp  LapisController.cpp  LapisController.hpp  PointMetricCalculator.cpp  PointMetricCalculator.hpp  PointMetricHandler.cpp  PointMetricHandler.hpp  ProductHandler.cpp  ProductHandler.hpp  TaoHandler.cpp  TaoHandler.hpp  TopoHandler.cpp  TopoHandler.hpp  run_pch.hpp
src/test/: CsmAlgorithmsTest.cpp  CsmHandlerTest.cpp  CsmPostProcessTest.cpp  DemAlgorithmTest.cpp  FineIntTest.cpp  FullRunTests.cpp  GenerateTestdata.R  LapisControllerTest.cpp  ParameterSpoofer.cpp  ParameterSpoofer.hpp  PointMetricCalculatorTest.cpp  PointMetricHandlerTest.cpp  ProdutHandlerTest.cpp  RunParametersTest.cpp  TaoHandlerTest.cpp  TaoIdAlgorithmTest.cpp  TaoSegmentAlgorithmTest.cpp  TopoAlgosTest.cpp  TopoHandlerTest.cpp  alignmenttest.cpp  coordreftest.cpp  coordtransformtest.cpp  coordvectortest.cpp  cropviewtest.cpp  csmalgostest.cpp  demalgostest.cpp  extenttest.cpp  lapisdatatest.cpp  lapisobjectstest.cpp  lasiotest.cpp  lasreadertest.cpp  quadextenttest.cpp  rasteralgostest.cpp  rastertest.cpp  test_pch.hpp  usableparameterstest.cpp
src/test/testfiles/: coarsegroundmodeltest.img  finegroundmodeltest.img  largelaz.laz  testlaz10.laz  testlaz14.laz  testlazground.img  testlazground.img.aux.xml  testlaznormalized.laz  testraster.img  testraster.tif  testvect.dbf  testvect.shp  testvect.shx  testwithwithheld.laz
src/utils/: LapisFonts.cpp  LapisFonts.hpp  LapisLogger.cpp  LapisLogger.hpp  LapisOSSpecific.cpp  LapisOSSpecific.hpp  LapisWindows.hpp  MetadataPdf.cpp  MetadataPdf.hpp
